--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,23 +4,31 @@ plugins {
 }
 
 android {
-    namespace 'com.jery.feedformulation'
-    compileSdk 34
+    namespace 'com.jery.feedformulation4'
+    compileSdk 33
 
     defaultConfig {
-        applicationId "com.jery.feedformulation"
-        minSdk 24
-        targetSdk 34
+        applicationId "com.jery.feedformulation4"
+        minSdk 23
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix ".debugXML"
+        }
+        applicationVariants.all { variant ->
+            variant.outputs.all {
+                outputFileName = "app-release-v${versionName}.apk"
+            }
         }
     }
     compileOptions {
@@ -30,15 +38,23 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding=true
+        dataBinding=true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
+
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
