--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FeedFormulation"
+        android:theme="@style/Theme.FeedFormulation5"
         tools:targetApi="31">
+        <activity
+            android:name=".NewFeedActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
