--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-
-rootProject.name = "Feed Formulation"
+rootProject.name = "Feed Formulation 5"
 include ':app'
