--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FeedFormulation"
+        android:theme="@style/Theme.FeedFormulation7"
         tools:targetApi="31">
+        <activity
+            android:name=".CalculatedFeeds"
+            android:exported="false" />
+        <activity
+            android:name=".FeedList"
+            android:exported="false" />
+        <activity
+            android:name=".CalculatedNutrients"
+            android:exported="false" />
+        <activity
+            android:name=".TMR_Data"
+            android:exported="false" />
+        <activity
+            android:name=".TMRMaker"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
