--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
-rootProject.name = "Feed Formulation"
+rootProject.name = "8 Feed Formulation"
 include ':app'
