--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FeedFormulation"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activities.Formulation"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.FeedsSelection"
             android:exported="false" />
         <activity
