Testing - Working point

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
@@ -36,7 +37,6 @@ android {
     }
     buildFeatures {
         viewBinding=true
-        //noinspection DataBindingWithoutKapt
         dataBinding=true
     }
     kotlinOptions {
